[tool.poetry]
name = "streamlit_demo"
version = "0.1.0"
description = ""
authors = ["yskn67 <yskn1967@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
streamlit = "^1.10.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
numpy = "^1.22.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
